--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,11 +1,173 @@
+.form {
+  background: #fff;
+  box-shadow: 0px 12px 24px rgba(44, 39, 56, 0.02), 0px 32px 64px rgba(44, 39, 56, 0.04);
+  border-radius: 24px;
+  padding: 40px 30px;
+  box-sizing: border-box;
+}
+
+.form__title {
+  margin: 0 0 8px;
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 44px;
+  color: #2c2738;
+}
+
 .form__description {
-  /*display: flex;*/
+  display: flex;
 }
 
 .form__redirect-title {
-  display: inline;
+  margin: 0 6px 0 0;
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #2c2738;
 }
 
 .form__redirect-button {
-  display: inline;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+  color: #0880ae;
+  cursor: pointer;
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.form__link {
+  visibility: visible;
+  margin: 0 0 26px;
+  padding: 0;
+  width: 100%;
+  height: 26.27px;
+}
+
+.form__link_hidden {
+  visibility: hidden;
+}
+
+.form__inputs {
+  margin: 0 0 38px;
+}
+
+.form__field {
+  display: flex;
+}
+
+.form__field_type_default {
+  flex-direction: column;
+}
+
+.form__input-label {
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  color: #756f86;
+  margin: 0 0 6px;
+}
+
+.form__input {
+  background: #ffffff;
+  border: 1px solid #dbe2ea;
+  box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+}
+
+.form__input:focus {
+  border: 2px solid #0880ae;
+}
+
+.form__input::placeholder {
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  color: #7c9cbf;
+}
+
+.form__input-error {
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ff7171;
+}
+
+.form__input_type_default {
+  border-radius: 6px;
+  padding: 16px;
+  box-sizing: border-box;
+  margin: 0 0 8px;
+}
+
+.form__input_type_checkbox {
+  border-radius: 4px;
+  margin: 0 8px 0 0;
+  padding: 0;
+}
+
+.form__input_type_checkbox:checked {
+  background-image: url('../../images/icon.svg');
+}
+
+.form__accept-title {
+  margin: 0;
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  color: #756f86;
+}
+
+.form__accept-link {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  color: #0880ae;
+  cursor: pointer;
+}
+
+.form__submit-button {
+  box-shadow: 0px 2px 4px rgba(44, 39, 56, 0.08), 0px 4px 8px rgba(44, 39, 56, 0.08);
+  border-radius: 6px;
+  padding: 18px 0;
+  box-sizing: border-box;
+  width: 100%;
+  border: none;
+
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+}
+
+.form__submit-button_disabled {
+  background: #dbe2ea;
+  color: #b1b5bf;
+}
+
+.form__submit-button_enabled {
+  background: #0880ae;
+  color: #ebf4f8;
 }
