--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -82,9 +82,20 @@
 }
 
 .form__input {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #dbe2ea;
   box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+  outline: none;
+  box-sizing: border-box;
+  height: 52px;
+  width: 100%;
+
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #2c2738;
 }
 
 .form__input:focus {
@@ -94,7 +105,7 @@
 .form__input::placeholder {
   font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 21px;
   color: #7c9cbf;
@@ -116,6 +127,49 @@
   margin: 0 0 8px;
 }
 
+/***********************************************************************/
+/** Стилизуем выпадающий список  ****************/
+
+.form__input_type_select {
+  margin: 0 0 4px;
+}
+
+.form__input_type_select:focus {
+  caret-color: transparent;
+}
+
+.form__select-input-options {
+  font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #756f86;
+  list-style: none;
+  padding: 12px 0;
+  box-sizing: border-box;
+  margin: 0;
+  text-align: start;
+
+  background: #fff;
+  border: 1px solid #dbe2ea;
+  box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04), 0px 20px 20px rgba(44, 39, 56, 0.04);
+  border-radius: 6px;
+}
+
+.form__select-input-option {
+  padding: 12px 15px;
+  box-sizing: border-box;
+  border: 1px solid green;
+}
+
+.form__select-input-option_mouseentered {
+  background: #ebf4f8;
+}
+
+/************************************************************************/
+/** Стилизуем чекбокс принятия условий использования ***/
+
 .form__input-checkbox {
   display: none;
 }
@@ -133,7 +187,7 @@
   height: 24px;
   background-image: url('../../images/icon.svg');
   background-size: cover;
-  border: 1px solid #0880ae;
+  border: 2px solid #0880ae;
 }
 
 .form__accept-title {
@@ -159,6 +213,9 @@
   color: #0880ae;
   cursor: pointer;
 }
+
+/*******************************************************************************/
+/** Стилизуем кнопку сабмит  ******************************/
 
 .form__submit-button {
   box-shadow: 0px 2px 4px rgba(44, 39, 56, 0.08), 0px 4px 8px rgba(44, 39, 56, 0.08);
