--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+.app__form {
+  width: 100%;
+  max-width: 460px;
+}
+
 .form__title {
   margin: 0 0 8px;
   font-family: IBM Plex Sans, Arial, Helvetica, sans-serif;
@@ -120,6 +125,10 @@
   color: #ff7171;
 }
 
+.form__input-error_hidden {
+  color: transparent;
+}
+
 .form__input_type_default {
   border-radius: 6px;
   padding: 16px;
@@ -201,21 +210,19 @@
 /************************************************************************/
 /** Стилизуем чекбокс принятия условий использования ***/
 
-.form__input-checkbox {
-  display: none;
-}
-
-.form__input-checkbox + .form__input_type_checkbox {
+.form__accept-checkbox {
   width: 24px;
   height: 24px;
   border-radius: 4px;
   margin: 0 8px 0 0;
   padding: 0;
+  outline: none;
+  background: #fff;
+  border: 1px solid #dbe2ea;
+  box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04), 0px 20px 20px rgba(44, 39, 56, 0.04);
 }
 
-.form__input-checkbox:checked + .form__input_type_checkbox {
-  width: 24px;
-  height: 24px;
+.form__accept-checkbox_checked {
   background-image: url('../../images/checkbox-icon.svg');
   background-size: cover;
   border: 2px solid #0880ae;
