--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,9 +1,23 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
 .form {
   background: #fff;
   box-shadow: 0px 12px 24px rgba(44, 39, 56, 0.02), 0px 32px 64px rgba(44, 39, 56, 0.04);
   border-radius: 24px;
   padding: 40px 30px;
   box-sizing: border-box;
+  z-index: 2;
 }
 
 .app__form {
